# penn-canvas

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt  roles.py  sandbox.py
.gitlab/issue_templates/: feature.md
penn_canvas/: api.py  archive.py  blue_jeans.py  blue_jeans_original.py  browser.py  bulk_enroll.py  canvas_shared.py  change_events.py  check_enrollment.py  config.py  constants.py  count_poll_everywhere.py  count_quizzes.py  count_sites.py  course_shopping.py  course_storage_quota.py  email.py  email_confirmation.py  enable_reserve.py  find_users_by_email.py  group_enrollments.py  helpers.py  instructors.py  integrity.py  investigate.py  main.py  module.py  module_progression_lock.py  new_student_orientation.py  notifier.py  nso.py  open_canvas_bulk_action.py  open_canvas_enroll.py  piazza_report.py  quiz_students_check.py  report.py  reports.py  reserve.py  reserve_report.py  roles.py  (+8 more)
penn_canvas/archive/: announcements.py  archive.py  assignments.py  content.py  discussions.py  grades.py  groups.py  helpers.py  modules.py  pages.py  quizzes.py  rubrics.py  syllabus.py
penn_canvas/archive/assignments/: assignment_descriptions.py  assignments.py  comments.py  descriptions.py  submissions.py
penn_canvas/archive/quizzes/: descriptions.py  questions.py  quiz_descriptions.py  quizzes.py  responses.py  scores.py
penn_canvas/scraps/: ares.py  move_accounts.py
tests/: test_penn_canvas.py
