[tool.poetry]
name = "penn-canvas"
version = "0.2.0"
description = "CLI for working with Penn's Canvas instances"
authors = ["Ben Rosen <benrosen@upenn.edu>"]
readme = "README.md"

[tool.poetry.scripts]
penn-canvas = "penn_canvas.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
canvasapi = "^2.2.0"
requests = "^2.25.1"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
cx-Oracle = "^8.2.1"
natsort = "^7.1.1"
typer = {extras = ["all"], version = "^0.4.0"}
python-magic-bin = "^0.4.14"
ua-parser = "^0.10.0"
tqdm = "^4.62.3"
loguru = "^0.6.0"
inflect = "^5.4.0"
beautifulsoup4 = "^4.10.0"
flatten-json = "^0.1.13"
click = "8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.6b0"
isort = "^5.8.0"
pre-commit = "^2.15.0"
types-pytz = "^2021.3.0"
mypy = "^0.910"
types-requests = "^2.25.11"
pandas-stubs = "^1.2.0"
bpython = "^0.22.1"
pyproject-flake8 = "^0.0.1-alpha.2"
pyinstaller = "^4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
experimental_string_processing = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
